# epanet-msx-python

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-requirements.txt  clean.sh  out.rpt  setup.py  test.py  toolkit.i
.github/workflows/: build_wheels.yml
examples/: batch_example.py  example.py
scripts/: build.sh  build_wheels.sh
test/: test_msx.py
tests/: test_msx.py
wrapper/: toolkit.i
wrappers/: toolkit.i
